Adicionado pag: medieval, contato + peq alterações

--- a/contato/contato.html
+++ b/contato/contato.html
@@ -2,10 +2,83 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <meta name="description" content="De seus primeiros passos no estudo da história mundial do teatro conosco. Aprenda aqui!">
+
+    <meta name="keywords" content="teatro, estudos, história, grécia, idade média, rnascimento, didática">
+
+    <title>Teoria&Palco - Contato</title>
 </head>
 <body>
-    
+    <div>
+        <nav>
+            <ul>
+                <li><a href="index.html" id="logo">Logo</a></li>
+                <li><a href="teatro_primitivo.html">Teatro Primitivo</a></li>
+                <li><a href="teatro_grego.html">Teatro Grego</a></li>
+                <li><a href="teatro_medieval.html">Teatro Medieval</a></li>
+                <li><a href="teatro_renascentista.html">Teatro Renascentista</a></li>
+            </ul>
+        </nav>
+    </div>
+
+    <div>
+        <main>
+            <section>
+                <h1>Contato</h1>
+
+                <p>Espaço reservado para que você fale com a equipe do site. Mande suas sugestões, elogios, críticas ou dúvidas.</p>
+
+                <form>
+                    <label for="name">Nome (Obrigatório)</label>
+                    <br>
+                    <input type="text" name="name">
+                </form>
+
+                <br>
+
+                <form>
+                    <label for="email">Email (Obrigatório)</label>
+                    <br>
+                    <input type="text" name="email">
+                </form>
+
+                <br>
+
+                <form>
+                    <label for="subject">Assunto (Obrigatório)</label>
+                    <br>
+                    <input type="text" name="subject">
+                </form>
+
+                <br>
+
+                <form>
+                    <label for="message">Mensagem (Obrigatório)</label>
+                    <br>
+                    <input type="text" name="message">
+                </form>
+
+                <br>
+
+                <form>
+                    <button type="submit">Enviar</button>
+                </form>
+            </section>
+        </main>
+    </div>
+
+    <br>
+
+    <footer>
+        <p>Teoria&Palco: conteúdos teóricos teatrais.</p> 
+        <p>&copy; 2024</p>
+        <a href="#logo">Contato</a>
+        <p>Siga-nos:<a href="https://www.instagram.com/teoria_palco/?next=%2F">Instagram</a></p>
+     </footer>
+
+
 </body>
 </html>
