--- a/teatro_medieval.html
+++ b/teatro_medieval.html
@@ -23,5 +23,170 @@
             </ul>
         </nav>
     </div>
+
+    <div>
+        <main id="inicio">
+            <section>
+                <article>
+                    <h1>Teatro Medieval</h1>
+                    
+                    <div>
+                        <figure>
+                            <img src="imagem/juizo_final_medieval.jpg" alt="escultura medieval da Catedral de Ulm" width="650xp" height="300xp">
+
+                            <figcaption>Juízo Final com Boca do Inferno. Parte do tímpano sobre o portal sul da Catedral de Ulm, c. 1360-1370.    </figcaption>
+                        </figure>
+                    </div>
+
+                    <p>O teatro medieval é aquele que foi produzido na era medieval (século V ao XV). Período caracterizado como “Idade das trevas” pelos humanistas do século XVII, onde generalizaram toda a civilização da Europa do século V ao século XV como um tempo de ruína e flagelo.</p>
+
+                    <p>Porém, de acordo com a teórica, Margot Berthold, em sua obra “História Mundial do Teatro”, podemos ver que</p>
+
+                    <!--inicio citação-->
+
+                    <p>Assim como a Idade Média não foi mais "escura" do que qualquer outra época, tampouco seu teatro foi cinzento e monótono. Mas suas formas de expressão não foram as mesmas da Antigüidade e, pelos padrões desta, foram "não clássicas". Sua dinâmica desafiou a disciplina das proporções harmoniosas e preferiu a exuberância completa. É por isso que o teatro medieval é tão difícil de ser estudado, e é por isso que frequentemente ocupa um lugar inferior no certame das formas rivais do teatro mundial.</p>
+
+                    <!--fim citação-->
+
+                    <p>A igreja católica, com a ascensão do teocentrismo, onde Deus era considerado o centro de todo o universo, e tal doutrina como a única verdade, proíbe a existência dos mimos¹, justamente por estes satirizá-la e a seus cultos. Assim, do século V ao século IX não há registros de atividades teatrais no Ocidente, a não ser apresentações de trupes itinerantes herdeiras dos ambulantes mimos e pantomimos que tanto prestígio e sucesso tiveram na Roma Imperial.</p>
+
+                    <p>O teatro ressurge na metade do período da Idade média, a partir de fontes religiosas (dramas litúrgicos, mistérios, milagres, moralidades, autos); eruditas (estudo dos clássicos nos monastérios); populares (farra, jograis, autos sacramentais).</p>
+
+                    <p>Após condenar e banir os artistas teatrais, é dentro da própria igreja que o teatro ressurgirá; a mesma se apropria desta expressão artística mantendo-a de acordo com seus interesses, realizando uma propaganda do catolicismo, tornando assim a única educação viável para o povo às missas e as manifestações teatrais que a mesma realizava, conhecido como “autos”, e é a partir da própria igreja que o teatro tornar-se-á novamente popular e tomará as ruas dos feudos, burgas e povoados medievais nas grandiosas encenações dos mistérios.</p>
+
+                    <h2>Mistérios</h2>
+
+                    <p>Gênero teatral da Idade Média, surgido entre os séculos XIV e XV, que se desenvolveu como um estilo de peça religiosa mais ampla que os Milagres. As imensas peças mantinham o ensinamento religioso como foco principal, recriando dramaticamente passagens da Bíblia (Antigo e Novo Testamentos) e da vida dos santos, ilustrando a visão da história humana, desde a queda de Adão até o Juízo Final.</p>
+
+                    <h2>Milagres</h2>
+
+                    <p>Gênero teatral da Idade Média, surgido entre os séculos XIII e XIV, que se desenvolveu, fundamentalmente, tomando como mote a vida de santos. Os Milagres apresentavam histórias em que a intervenção divina, de santos ou da virgem Maria, acontecia para salvar personagens, que pecaram - não por deliberação e índole -, mas por contingências sociais.Por trás do tradicional enredo das peças, estava incrustada a ideia de que o homem era sujeito dos seus próprios atos e que somente a intervenção divina, diante da apelação, poderia mudar aquilo que já estava determinado. O caráter didático-moral da Igreja se mantinha presente nas peças, ao ilustrar que somente diante do verdadeiro arrependimento e da fé se poderia alcançar o perdão.</p>
+
+                    <h2>Moralidade</h2>
+
+                    <p>Obra dramática medieval a partir de 1400, de inspiração religiosa e com intenção didática e moralizante. As personagens são alegorias e a intriga insignificante, vícios versus virtudes, bem contra o mal. São utilizados elementos cômicos e farsescos. 
+                    A trama continha uma estrutura épica para contar a história, para que assim não houvesse discordância nos dogmas a ser passado ao povo. Já se pode compreender como uma forma teatral literária</p>
+
+                    <p>Podemos ver como a teórica Margot Berthold, em sua obra “História Mundial do Teatro”, revela o resultado de sua pesquisa</p>
+
+                    <!--inicio citação-->
+
+                    <p>Paraíso e Inferno, Getsêmani e Gólgota, Satã e os Bem- Aventurados são tão didaticamente confrontados no teatro quanto no sermão. O drama eclesial medieval sempre teve uma função pedagógica, mesmo quando passou a ser apresentado na praça do mercado e passou a preocupar-se com o conjunto dos cidadãos.</p>
+
+                    <!--fim citação-->
+
+                    <div>
+                        <figure>
+                            <img src="imagem/boca_do_inferno_medieval.jpeg" alt="representação de uma peça mitológica barroca" width="600xp" height="400xp">
+
+                            <figcaption>Boca do Inferno de uma peça mitológica barroca, apresentada num carro alegórico do Préstito dos Deuses em Dresden. 1695, com a participação da corte. Esboço para gravação em cobre (Dresden. Kupferstichkabinett).</figcaption>
+                        </figure>   
+                    </div>
+
+                    <h3>Indicação cinematográfica:</h3>
+
+                    <p>Deixamos aqui uma indicação do esplêndido filme “O Nome da Rosa”, que lhe ajudará a compreender um pouco mais acerca das características da Idade Média.</p>
+
+                    <div>
+                        <figure>
+                            <img src="imagem/capa_o_nome_da_rosa.jpg" alt="capa do filme O Nome da Rosa" width="220xp" height="380xp">
+                        </figure>
+                    </div>
+                    
+                    <div>
+                        <p><em>Título original:</em> Le Nom de la Rose</p>
+                        <p><em>Direção:</em> Jean-Jacques Annaud</p>
+                        <p><em>Roteiro:</em> Andrew Birkin, Gérard Brach</p>
+                        <p><em>Data de lançamento:</em> 11 de dezembro de 1986</p>
+
+                        <p><em>Sinopse</em><br>Um monge franciscano investiga uma série de assassinatos em um remoto mosteiro italiano. Isso provoca uma guerra ideológica entre os franciscanos e os dominicanos, enquanto o monge lentamente soluciona os misteriosos assassinatos.</p>
+                    </div>
+
+                    <div>
+                        <h3>Trailer</h3>
+                        <iframe width="420" height="215" src="https://www.youtube.com/embed/zIIuJ-ynL2o?si=ejRLgdq3DSU-skNt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </div>
+
+                    <h2>Commedia dell'arte</h2>
+
+                    <p>Surgiu ao final da Idade Média (séc XVI) e tornou-se ao longo do século XVI uma das manifestações teatrais mais importantes na Europa.</p>
+
+                    <div>
+                        <figure>
+                            <img src="imagem/capitano_commedia_dell_arte.jpeg" alt="Capitano" width="600" height="400">
+
+                            <figcaption>Il Capitano, um dos personagens da Commedia dell'arte</figcaption>
+                        </figure>
+                    </div>
+
+                    <p>A commedia dell’arte se baseava no improviso, tendo suas apresentações realizadas por artistas mambembes em feiras livres, festas populares com um palco montado sobre uma carroça de madeira ou nos salões dos castelos quando convidados por algum nobre.</p>
+
+                    <div>
+                        <figure>
+                            <img src="imagem/palco_commedia_dell_arte.png" alt="palco commedia dell'arte" width="600" height="300">
+
+                            <figcaption>Commedia dell'arte: representação de palco.</figcaption>
+                        </figure>
+                    </div>
+
+                    <p>Os personagens que integravam as histórias encenadas pela Commedia Dell’arte eram caricaturados, tipificados e estereotipados. personagens conhecidos como “tipos fixos”, representavam pessoas do povo e/ou da burguesia ascendente, raramente nobres ou aristocratas. Estavam divididos em três grupos: os enamorados, os criados e os patrões.</p>
+
+                    <p>Os atores ao representarem os personagens tipos, além do figurino colorido, faziam uso da máscara como um de seu importante recurso cênico; cada personagem tinha sua própria máscara, tornando assim mais uma das características desta persona. Geralmente, os que não utilizavam máscaras eram os enamorados.</p>
+
+                    <h3>Principais personagens da commedia dell'arte:</h3>
+
+                    <div>
+                        <img src="imagem/unnamed.jpg" alt="personagens commedia dell'arte" width="300" height="800">
+                    </div>
+
+                    <div>
+                        <ul>
+                            <li><strong>Arlecchino:</strong> principal figura da commedia dell'arte. Arlequim era um servo e palhaço atrapalhado, ágil e malandro.</li>
+
+                            <li><strong>Colombina:</strong> era uma criada graciosa, inteligente, ágil e habilidosa. Trata-se da única criada feminina, namorada de Arlequim.</li>
+
+                            <li><strong>Pantalone:</strong> representava um velho rico, conservador, autoritário e avarento.</li>
+
+                            <li><strong>Brighella:</strong> servo fiel, astuto, egoísta, ágil e cínico. Trata-se de um cantor trapaceiro que trabalha para Pantalone.</li>
+
+                            <li><strong>Pedrollino:</strong> também chamado de Pedro ou Pierrot, era um servo fiel e honesto.</li>
+
+                            <li><strong>Pulcinella:</strong> era um corcunda também conhecido como Punch.</li>
+
+                            <li><strong>Dottore:</strong> Era um velho rico, charlatão e avarento. Aliado de Pantalone, possuía uma postura de intelectual.</li>
+
+                            <li><strong>Capitano:</strong> conhecido como capitão, ele é fanfarrão, mentiroso, preguiçoso e forte. No entanto, tem uma postura covarde nas batalhas e no amor.</li>
+
+                            <li><strong>Orazio:</strong> enamorado ingênuo, fútil, atraente e vaidoso, movido pela paixão. Além dele, era comum o enamorado Leandro.</li>
+
+                            <li><strong>Isabella:</strong> enamorada inocente, vaidosa e com alto poder de sedução. Ela apaixonava-se com facilidade. Além dela, destacam-se as enamoradas: Rosalba, Flavínia e Lavínia.</li>
+                        </ul>
+                    </div>
+
+                    <h4>Veja a seguir um fragmento da série “Cervante”, onde podemos ver uma representação de como se era encenado a Commedia dell’arte:</h4>
+
+                    <div>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/600CSMfUhnU?si=_UU6R4SFQI9iQpzY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </div>
+                </article>
+            </section>
+        </main>
+    </div>
+
+    <br>
+
+    <div>
+        <a href="#inicio">voltar ao inicio</a>
+    </div>
+
+    <br>
+
+    <footer>
+        <p>Teoria&Palco: conteúdos teóricos teatrais.</p> 
+        <p>&copy; 2024</p>
+        <a href="contato/contato.html">Contato</a>
+        <p>Siga-nos:<a href="https://www.instagram.com/teoria_palco/?next=%2F">Instagram</a></p>
+     </footer>
+
 </body>
 </html>
