Add CSS + alt HTML

--- a/teatro_renascentista.html
+++ b/teatro_renascentista.html
@@ -6,21 +6,55 @@
 
     <meta name="description" content="De seus primeiros passos no estudo da história mundial do teatro conosco. Aprenda aqui!">
 
-    <meta name="keywords" content="teatro, estudos, história, grécia, idade média, rnascimento, didática">
+    <meta name="keywords" content="teatro, estudos, história, grécia, idade média, renascimento, didática">
+
+    <link rel="stylesheet" href="style.css">
 
     <title>Teatro&Palco - Teatro Renascentista</title>
 </head>
 <body>
-    <div>
-        <nav>
-            <ul>
-                <li><a href="index.html">Logo</a></li>
-                <li><a href="teatro_primitivo.html">Teatro Primitivo</a></li>
-                <li><a href="teatro_grego.html">Teatro Grego</a></li>
-                <li><a href="teatro_medieval.html">Teatro Medieval</a></li>
-                <li><a href="teatro_renascentista.html">Teatro Renascentista</a></li>
-            </ul>
-        </nav>
-    </div>
+    
+    <header class="menu">
+
+        <ul class="menu__list">
+
+            <li class="menu__list list__padding--logo"><a href="index.html" class="menu__list--decoration">Logo</a></li>
+
+            <li class="menu__list list__padding"><a href="teatro_primitivo.html" class="menu__list--decoration">Teatro Primitivo</a></li>
+
+            <li class="menu__list list__padding"><a href="teatro_grego.html" class="menu__list--decoration">Teatro Grego</a></li>
+
+            <li class="menu__list list__padding"><a href="teatro_medieval.html" class="menu__list--decoration">Teatro Medieval</a></li>
+
+            <li class="menu__list list__padding"><a href="teatro_renascentista.html" class="menu__list--decoration">Teatro Renascentista</a></li>
+
+            <li class="menu__item com-submenu list__padding--distinct">
+                <a href="" class="menu__list--decoration">
+                    <img src="imagem/menu-burger.png" width="20px" height="20px">
+                </a>
+
+                <ul class="submenu">
+
+                    <li class="submenu__item">
+                        <a href="quem_somos/quem_somos.html" class="menu__list--decoration">Sobre nós</a>
+                    </li>
+
+                    <li class="submenu__item">
+                        <a href="contato/contato.html" class="menu__list--decoration">Contato</a>
+                    </li>
+
+                    <li class="submenu__item">
+                        <a href="bibliografia/bibliografia.html" class="menu__list--decoration">Bibliografia</a>
+                    </li>
+
+                    <li class="subnav__item">
+                        <a href="espacos_para_estudar/espacos_para_estudar.html" class="menu__list--decoration">Onde estudar</a>
+                    </li>
+                </ul>
+
+            </li>
+        
+        </ul>
+    </header>
 </body>
 </html>
