--- a/contato/contato.html
+++ b/contato/contato.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
 
@@ -7,23 +7,57 @@
 
     <meta name="description" content="De seus primeiros passos no estudo da história mundial do teatro conosco. Aprenda aqui!">
 
-    <meta name="keywords" content="teatro, estudos, história, grécia, idade média, rnascimento, didática">
+    <meta name="keywords" content="teatro, estudos, história, grécia, idade média, renascimento, didática">
+
+    <link rel="stylesheet" href="../style.css">
 
     <title>Teoria&Palco - Contato</title>
 </head>
 <body>
-    <div>
-        <nav>
-            <ul>
-                <li><a href="index.html" id="logo">Logo</a></li>
-                <li><a href="teatro_primitivo.html">Teatro Primitivo</a></li>
-                <li><a href="teatro_grego.html">Teatro Grego</a></li>
-                <li><a href="teatro_medieval.html">Teatro Medieval</a></li>
-                <li><a href="teatro_renascentista.html">Teatro Renascentista</a></li>
-            </ul>
-        </nav>
-    </div>
+   
+    <header class="menu">
 
+        <ul class="menu__list">
+
+            <li class="menu__list list__padding--logo"><a href="../index.html" class="menu__list--decoration">Logo</a></li>
+
+            <li class="menu__list list__padding"><a href="../teatro_primitivo.html" class="menu__list--decoration">Teatro Primitivo</a></li>
+
+            <li class="menu__list list__padding"><a href="../teatro_grego.html" class="menu__list--decoration">Teatro Grego</a></li>
+
+            <li class="menu__list list__padding"><a href="../teatro_medieval.html" class="menu__list--decoration">Teatro Medieval</a></li>
+
+            <li class="menu__list list__padding"><a href="../teatro_renascentista.html" class="menu__list--decoration">Teatro Renascentista</a></li>
+
+            <li class="menu__item com-submenu list__padding--distinct">
+                <a href="" class="menu__list--decoration">
+                    <img src="../imagem/menu-burger.png" width="20px" height="20px">
+                </a>
+
+                <ul class="submenu">
+
+                    <li class="submenu__item">
+                        <a href="../quem_somos/quem_somos.html" class="menu__list--decoration">Sobre nós</a>
+                    </li>
+
+                    <li class="submenu__item">
+                        <a href="../contato/contato.html" class="menu__list--decoration">Contato</a>
+                    </li>
+
+                    <li class="submenu__item">
+                        <a href="../bibliografia/bibliografia.html" class="menu__list--decoration">Bibliografia</a>
+                    </li>
+
+                    <li class="subnav__item">
+                        <a href="../espacos_para_estudar/espacos_para_estudar.html" class="menu__list--decoration">Onde estudar</a>
+                    </li>
+                </ul>
+
+            </li>
+        
+        </ul>
+    </header>
+    
     <div>
         <main>
             <section>
@@ -34,7 +68,7 @@
                 <form>
                     <label for="name">Nome (Obrigatório)</label>
                     <br>
-                    <input type="text" name="name">
+                    <input type="text" name="name" placeholder="Nome">
                 </form>
 
                 <br>
@@ -42,7 +76,7 @@
                 <form>
                     <label for="email">Email (Obrigatório)</label>
                     <br>
-                    <input type="text" name="email">
+                    <input type="text" name="email" placeholder="Email">
                 </form>
 
                 <br>
@@ -50,7 +84,7 @@
                 <form>
                     <label for="subject">Assunto (Obrigatório)</label>
                     <br>
-                    <input type="text" name="subject">
+                    <input type="text" name="subject" placeholder="Assunto">
                 </form>
 
                 <br>
@@ -58,7 +92,7 @@
                 <form>
                     <label for="message">Mensagem (Obrigatório)</label>
                     <br>
-                    <input type="text" name="message">
+                    <input type="text" name="message" placeholder="Converce conosco">
                 </form>
 
                 <br>
@@ -70,12 +104,9 @@
         </main>
     </div>
 
-    <br>
-
     <footer>
         <p>Teoria&Palco: conteúdos teóricos teatrais.</p> 
         <p>&copy; 2024</p>
-        <a href="#logo">Contato</a>
         <p>Siga-nos:<a href="https://www.instagram.com/teoria_palco/?next=%2F">Instagram</a></p>
      </footer>
 
