--- a/teatro_grego.html
+++ b/teatro_grego.html
@@ -18,34 +18,43 @@
 
         <ul class="menu__list">
 
-            <li class="menu__list list__padding--logo"><a href="index.html" class="menu__list--decoration">Logo</a></li>
+            <li class="menu__list--01"><a href="index.html" class="menu__list--decoration">Logo</a></li>
 
-            <li class="menu__list list__padding"><a href="teatro_primitivo.html" class="menu__list--decoration">Teatro Primitivo</a></li>
+            <li class="menu__list--middle"><a href="teatro_primitivo.html" class="menu__list--decoration">Teatro Primitivo</a></li>
 
-            <li class="menu__list list__padding"><a href="teatro_grego.html" class="menu__list--decoration">Teatro Grego</a></li>
+            <li class="menu__list--middle"><a href="teatro_grego.html" class="menu__list--decoration">Teatro Grego</a></li>
 
-            <li class="menu__list list__padding"><a href="teatro_medieval.html" class="menu__list--decoration">Teatro Medieval</a></li>
+            <li class="menu__list--middle"><a href="teatro_medieval.html" class="menu__list--decoration">Teatro Medieval</a></li>
 
-            <li class="menu__list list__padding"><a href="teatro_renascentista.html" class="menu__list--decoration">Teatro Renascentista</a></li>
+            <li class="menu__list--middle"><a href="teatro_renascentista.html" class="menu__list--decoration">Teatro Renascentista</a></li>
 
-            <li class="menu__item com-submenu list__padding--distinct">
+            <li class="menu__item com-submenu">
                 <a href="" class="menu__list--decoration">
-                    <img src="imagem/menu-burger.png" width="20px" height="20px">
+                    <img src="imagem/menu-burger.png" width="25px" height="25px" class="zoom">
                 </a>
 
                 <ul class="submenu">
+
+
+                    <br><br><br>
 
                     <li class="submenu__item">
                         <a href="quem_somos/quem_somos.html" class="menu__list--decoration">Sobre nós</a>
                     </li>
 
+                    <br>
+
                     <li class="submenu__item">
                         <a href="contato/contato.html" class="menu__list--decoration">Contato</a>
                     </li>
 
+                    <br>
+
                     <li class="submenu__item">
                         <a href="bibliografia/bibliografia.html" class="menu__list--decoration">Bibliografia</a>
                     </li>
+                    
+                    <br>
 
                     <li class="subnav__item">
                         <a href="espacos_para_estudar/espacos_para_estudar.html" class="menu__list--decoration">Onde estudar</a>
